# mini-claude

./: .env.dev  .env.example  .env.prod  .env.staging  .gitignore  CLAUDE.md  PROGRESS.md  README.md  architecture-analysis.md  coverage.json  layers.json  pyproject.toml
.baseline/: baseline.json  junit_chaos.xml  junit_e2e.xml  junit_incremental.xml  junit_integration.xml  junit_stress.xml  junit_unit.xml
.claude/teams/: mini-claude-fix-team.json
.github/workflows/: test.yml
.understand-anything/: knowledge-graph.json  meta.json
.understand-anything/tmp/: ua-project-scan.js  ua-scan-results.json
issues/: ISSUE-001-streaming-tool-calls.md  ISSUE-002-observe-unbound-variable.md  ISSUE-003-model-loop-read-file.md  ISSUE-004-streaming-tool-args.md  ISSUE-005-session-syntax-error.md
reports/: regression_2026-05-03T13-37-43.899144.json  regression_2026-05-03T13-37-43.899144.md  regression_2026-05-03T13-39-40.687952.json  regression_2026-05-03T13-39-40.687952.md  regression_2026-05-03T13-40-08.438205.json  regression_2026-05-03T13-40-08.438205.md  regression_2026-05-03T13-45-19.115669.json  regression_2026-05-03T13-45-19.115669.md
scripts/: run_regression.py
src/mini_claude/: __init__.py
src/mini_claude/agent/: __init__.py  completion_config.py  complexity.py  coordinator.py  degradation.py  graph.py  nodes.py  routers.py  state.py  subagent.py  suggestion.py
src/mini_claude/cli/: __init__.py  display.py  main.py  plan_display.py  repl.py  repl_utils.py
src/mini_claude/config/: __init__.py  environment.py  settings.py  validation.py  watcher.py
src/mini_claude/context/: __init__.py  context.py  providers.py
test_output/: app.py  creative_story.md  e2e_test_report.md  pandas_best_practices_2024_report.md  parallel_report.md  tech_guide.md
test_output/templates/: index.html
tests/: conftest.py  test_chaos.py  test_degradation.py  test_stress.py  test_summary.py
tests/test_agent/: test_complexity.py  test_execution_plan_integration.py  test_graph.py  test_json_parse_and_max_tokens.py  test_reflect_node.py  test_suggestion.py
tests/test_cli/: test_commands_base.py  test_help_handler.py  test_plan_display.py  test_profile_handler.py  test_session_handler.py  test_skill_handler.py
tests/test_config/: test_environment.py  test_reload.py  test_settings.py  test_validation.py
tests/test_context/: test_context.py
tests/test_integration/: __init__.py  test_agent_flow.py  test_e2e_user_flow.py  test_edit_file_retry.py  test_error_recovery.py  test_p1_integration.py  test_parallel_e2e.py
tests/test_llm/: test_prompts.py
tests/test_monitoring/: __init__.py  test_alerts.py  test_health.py  test_metrics.py  test_tracing.py
tests/test_skills/: test_loader.py  test_models.py  test_registry.py
tests/test_tools/: test_agent_spawn.py  test_base.py  test_bash.py  test_cache.py  test_dependencies.py  test_file_ops.py  test_health_check.py  test_subagent_mode.py
tests/test_utils/: test_enhanced_memory.py  test_execution_state.py  test_file_lock.py  test_logger.py  test_profile.py  test_rate_limiter.py  test_safety.py  test_token_manager.py  test_vector_store.py
(+66 files in other folders)
