[project]
name = "mini-claude"
version = "0.1.0"
description = "A mini Claude Code with multi-agent concurrency"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "litellm>=1.50.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.scripts]
mini-claude = "mini_claude.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_claude"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, API, etc.)",
    "e2e: End-to-end tests (full system)",
    "stress: Stress tests for high concurrency scenarios",
    "chaos: Chaos engineering tests for fault injection scenarios",
    "slow: Slow running tests (can be skipped with -m 'not slow')",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/mini_claude"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

[tool.coverage.html]
directory = "reports/coverage"
